# Labs

./: New.txt  Pranctice_3_KM_03__name_.ipynb  README.md
Labs/C++ labs/OpenGLDrawer/: CMakeLists.txt
Labs/C++ labs/OpenGLDrawer/res/: axisf.glsl  lightv.glsl  mainf.glsl  mainv.glsl  outlinef.glsl  outlinev.glsl
Labs/C++ labs/OpenGLDrawer/res/Basics/: OX.mtl  axis.mtl  hall.mtl
Labs/C++ labs/OpenGLDrawer/res/shaders/: lightf.glsl  lightv.glsl  mainf.glsl  mainv.glsl
Labs/C++ labs/OpenGLDrawer/src/: functions.h  main.cpp
Labs/C++ labs/OpenGLDrawer/src/Core/: Actor.cpp  Actor.h  Camera.cpp  Camera.h  Config.cpp  Config.h  Controls.cpp  Controls.h  EventsHandler.cpp  EventsHandlerFields.h  Global.cpp  Global.h  InGameException.h  PerspectiveCamera.cpp  PerspectiveCamera.h  ResourcesManager.cpp  ResourcesManager.h  Scene.cpp  Scene.h  Structures.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  Window.cpp  Window.h
Labs/C++ labs/OpenGLDrawer/src/Lighting/: DirectionalLight.cpp  PointLight.cpp  PointLight.h
Labs/C++ labs/OpenGLDrawer/src/Loaders/: objLoader.h
Labs/C++ labs/OpenGLDrawer/src/Render/: Material.h  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
Labs/C++ labs/OpenGLDrawer/src/UI/: UIBase.h  UIHandler.cpp  UIHandler.h
Labs/C++ labs/OpenGLDrawer/src/commandLineArgs/: Parser.cpp  Parser.h
Labs/C++ labs/OpenGLDrawer/src/draw/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h
Labs/C++ labs/OpenGLDrawer/src/general/: Camera.cpp  Camera.h  EventsHandler.cpp  EventsHandler.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Scene.cpp  Scene.h  Structures.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadSafeQueueFields.h  Window.cpp  Window.h
Labs/C++ labs/OpenGLDrawer/src/lights/: DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  (+2 more)
(+245 files in other folders)
